[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/CardPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://theming/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/CategoryPanel.gd" type="Script" id=3]

[node name="CategoryPanel" type="PanelContainer"]
margin_right = 200.0
margin_bottom = 532.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
card_list_path = NodePath("VBoxContainer/CardList/MarginContainer/CardsContainer")
card_scene = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 298.0
margin_bottom = 530.0

[node name="CategoryHeader" type="PanelContainer" parent="VBoxContainer"]
margin_right = 296.0
margin_bottom = 43.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="CategoryTitle" type="Button" parent="VBoxContainer/CategoryHeader"]
margin_left = 2.0
margin_top = 2.0
margin_right = 294.0
margin_bottom = 41.0
text = "Category Name"

[node name="CardList" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 296.0
margin_bottom = 480.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CardList"]
margin_right = 296.0
margin_bottom = 433.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="CardsContainer" type="VBoxContainer" parent="VBoxContainer/CardList/MarginContainer"]
margin_left = 5.0
margin_right = 291.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardPanel" parent="VBoxContainer/CardList/MarginContainer/CardsContainer" instance=ExtResource( 1 )]
margin_right = 286.0
margin_bottom = 433.0

[node name="BtnAddCard" type="Button" parent="VBoxContainer"]
margin_top = 484.0
margin_right = 296.0
margin_bottom = 528.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "+"

[connection signal="pressed" from="VBoxContainer/CategoryHeader/CategoryTitle" to="." method="_on_CategoryTitle_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnAddCard" to="." method="_on_BtnAddCard_pressed"]
